--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"]
   },
-  "types": ["vitest/globals"],
   "include": [
     "./declarations",
     "./*.js",
