--- a/package/package.json
+++ b/package/package.json
@@ -13,6 +13,10 @@
     "lint:all": "eslint \"**/*.{ts,tsx}\" --fix --quiet"
   },
   "dependencies": {
-    "is-plain-obj": "^4.1.0"
+    "is-plain-obj": "^4.1.0",
+    "lodash.isempty": "^4.4.0"
+  },
+  "devDependencies": {
+    "@types/lodash.isempty": "^4.4.7"
   }
 }
