feat(UIKIT-676): Реализован core пакета (#1)
* wip(UIKIT-676): Реализован core пакета

* wip(UIKIT-676): Исправлена типизация rule

* wip(UIKIT-676): Редизайн core

* wip(UIKIT-676): Поправлены типы rule

* wip(UIKIT-676): Реализован createErrorMap

* wip(UIKIT-676): Реализован createArrayError

* wip(UIKIT-676): Реализована логика object

* test(UIKIT-676): Написаны тесты для createGuard

* test(UIKIT-676): Дополнены тесты для object

* test(UIKIT-676): Реализован optional

* test(UIKIT-676): Реализован required

* test(UIKIT-676): Поправлены тесты guard

* test(UIKIT-676): Тест для required

* test(UIKIT-676): Написан тест для optional

* test(UIKIT-676): Исправлены тесты для required и object

* test(UIKIT-676): Исправлены тесты для createRule

* chore: Добавлен lock файл

* test(UIKIT-676): Исправлено название файла

* refactor(UIKIT-676): Рефакторинг required

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,6 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
@@ -25,8 +24,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "noFallthroughCasesInSwitch": true,
+    "types": ["vitest/globals"]
   },
-  "types": ["vitest/globals"],
   "include": [
     "./declarations",
     "./*.js",
