--- a/react-hook-form-resolver/package.json
+++ b/react-hook-form-resolver/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "7.x.x"
   },
   "devDependencies": {
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "react": "^18.2.0"
   }
 }
