--- a/react-hook-form-resolver/package.json
+++ b/react-hook-form-resolver/package.json
@@ -21,6 +21,12 @@
   },
   "devDependencies": {
     "react-hook-form": "^7.43.9",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "jsdom": "^22.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
