--- a/react-hook-form-resolver/tsconfig.json
+++ b/react-hook-form-resolver/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
+  },
   "include": [
     "./**/*.ts",
     "./**/*.tsx",
