--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build packages
         if: env.CURRENT_VERSION != env.NEXT_VERSION
         # PACKAGE_VERSION устанавливается в semantic-release.config.js
-        run: npm run build --workspace=@astral/revizor
+        run: npm run build --workspace=@astral/validations
         env:
           RELEASE_TAG: ${{ env.NEXT_VERSION }}
 
@@ -64,9 +64,9 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: html
           message: |
-            🚀 <b>Была опубликована новая версия пакета @astral/revizor !</b>
+            🚀 <b>Была опубликована новая версия пакета @astral/validations !</b>
 
-            📦  @astral/revizor: ${{ env.NEXT_VERSION }}
+            📦  @astral/validations: ${{ env.NEXT_VERSION }}
 
             ⚡️ <a href="https://github.com/kaluga-astral/${{ github.event.repository.name }}/releases/tag/v${{ env.NEXT_VERSION }}">Changelog</a>
 
