--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -41,17 +41,29 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Build всех пакетов
-      - name: Build packages
+      - name: Build @astral/validations
         if: env.CURRENT_VERSION != env.NEXT_VERSION
         # PACKAGE_VERSION устанавливается в semantic-release.config.js
         run: npm run build --workspace=@astral/validations
         env:
           RELEASE_TAG: ${{ env.NEXT_VERSION }}
 
+      - name: Build @astral/validations-react-hook-form-resolver
+        if: env.CURRENT_VERSION != env.NEXT_VERSION
+        run: npm run build --workspace=@astral/validations-react-hook-form-resolver
+        env:
+          RELEASE_TAG: ${{ env.NEXT_VERSION }}
+
       # Паблишинг всех пакетов
-#      - name: Publish packages
+#      - name: Publish @astral/validations
 #        if: env.CURRENT_VERSION != env.NEXT_VERSION
 #        run: npm publish ./package/lib
+#        env:
+#          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+#
+#      - name: Publish @astral/validations-react-hook-form-resolver
+#        if: env.CURRENT_VERSION != env.NEXT_VERSION
+#        run: npm publish ./react-hook-form-resolver/lib
 #        env:
 #          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
@@ -67,6 +79,7 @@ jobs:
             🚀 <b>Была опубликована новая версия пакета @astral/validations !</b>
 
             📦  @astral/validations: ${{ env.NEXT_VERSION }}
+            📦  @astral/validations-react-hook-form-resolver: ${{ env.NEXT_VERSION }}
 
             ⚡️ <a href="https://github.com/kaluga-astral/${{ github.event.repository.name }}/releases/tag/v${{ env.NEXT_VERSION }}">Changelog</a>
 
