--- a/package/package.json
+++ b/package/package.json
@@ -4,7 +4,7 @@
   "browser": "./src/index.ts",
   "main": "./src/index.ts",
   "scripts": {
-    "build": "RELEASE_TAG=22 node pack",
+    "build": "node pack",
     "publish": "npm publish ./lib",
     "tests": "vitest run",
     "tests:ci": "vitest run --reporter=junit --outputFile.junit=junit.xml",
