--- a/react-hook-form-resolver/package.json
+++ b/react-hook-form-resolver/package.json
@@ -4,7 +4,7 @@
   "browser": "./src/index.ts",
   "main": "./src/index.ts",
   "scripts": {
-    "build": "RELEASE_TAG=22 node pack",
+    "build": "node pack",
     "publish": "npm publish ./lib",
     "tests": "vitest run",
     "tests:ci": "vitest run --reporter=junit --outputFile.junit=junit.xml",
@@ -13,11 +13,11 @@
     "lint:all": "eslint \"**/*.{ts,tsx}\" --fix --quiet"
   },
   "dependencies": {
-    "@astral/validations": "*",
     "@hookform/resolvers": "^3.1.0"
   },
   "peerDependencies": {
-    "react-hook-form": "7.x.x"
+    "react-hook-form": "7.x.x",
+    "@astral/validations": "3.x.x"
   },
   "devDependencies": {
     "react-hook-form": "^7.43.9",
