chore: Настроен релиз пакета

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -55,17 +55,17 @@ jobs:
           RELEASE_TAG: ${{ env.NEXT_VERSION }}
 
       # Паблишинг всех пакетов
-#      - name: Publish @astral/validations
-#        if: env.CURRENT_VERSION != env.NEXT_VERSION
-#        run: npm publish ./package/lib
-#        env:
-#          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
-#
-#      - name: Publish @astral/validations-react-hook-form-resolver
-#        if: env.CURRENT_VERSION != env.NEXT_VERSION
-#        run: npm publish ./react-hook-form-resolver/lib
-#        env:
-#          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+      - name: Publish @astral/validations
+        if: env.CURRENT_VERSION != env.NEXT_VERSION
+        run: npm publish ./package/lib
+        env:
+          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
+      - name: Publish @astral/validations-react-hook-form-resolver
+        if: env.CURRENT_VERSION != env.NEXT_VERSION
+        run: npm publish ./react-hook-form-resolver/lib
+        env:
+          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
       # Нотификация в telegram
       - name: send telegram message on release
